Finished front-end of calculator

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     </head>
 
     <body>
+        <h1>my calculator, it adds 5 to the result</h1>
         <div class="calcBody">
             <div class="calcDisplay">
-                0
+                00000000
             </div>
             <div class="calcMid"> 
                 <div class="numerosEnt">
@@ -26,6 +27,7 @@
                     <button class="zero">0</button>
                     <button class="CE">CE</button>
                     <button class="equals">=</button>
+                    
                 </div>
                 <div class="operators">
                     <button class="plus">+</button>
