Made numbers display scrolling left when overflowed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <h1>my calculator, it adds 5 to the result</h1>
+        <h4>I'm sorry, but I've decided that the best way to take care of overflow is to just truncate the digits past 8 digits.</h4>
         <div class="calcBody">
             <div class="calcDisplay">
                 00000000
